[gd_scene load_steps=69 format=3 uid="uid://dbipo5nab3ub2"]

[ext_resource type="Script" uid="uid://b2ot3btik5mm8" path="res://scripts/slime.gd" id="1_ivqcw"]
[ext_resource type="Texture2D" uid="uid://dh8c7d3vjksl4" path="res://assets/characters/enemies/slime/slime basic outline v2-Sheet.png" id="2_n6pvg"]
[ext_resource type="PackedScene" uid="uid://bn0svyj40m4dx" path="res://scenes/killzone.tscn" id="3_n6pvg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3tc40"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_klxi6"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yeyc"]
atlas = ExtResource("2_n6pvg")
region = Rect2(192, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6mwi"]
atlas = ExtResource("2_n6pvg")
region = Rect2(288, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d6fo"]
atlas = ExtResource("2_n6pvg")
region = Rect2(384, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rewg1"]
atlas = ExtResource("2_n6pvg")
region = Rect2(480, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6x3v"]
atlas = ExtResource("2_n6pvg")
region = Rect2(576, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sacx8"]
atlas = ExtResource("2_n6pvg")
region = Rect2(672, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn7vh"]
atlas = ExtResource("2_n6pvg")
region = Rect2(768, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp1f2"]
atlas = ExtResource("2_n6pvg")
region = Rect2(864, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfrqf"]
atlas = ExtResource("2_n6pvg")
region = Rect2(960, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhl3i"]
atlas = ExtResource("2_n6pvg")
region = Rect2(1056, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qj7p"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf0ob"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_txv6o"]
atlas = ExtResource("2_n6pvg")
region = Rect2(192, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kut4w"]
atlas = ExtResource("2_n6pvg")
region = Rect2(288, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1chl"]
atlas = ExtResource("2_n6pvg")
region = Rect2(384, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3drt"]
atlas = ExtResource("2_n6pvg")
region = Rect2(480, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6uvq"]
atlas = ExtResource("2_n6pvg")
region = Rect2(576, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7btj"]
atlas = ExtResource("2_n6pvg")
region = Rect2(672, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yj7m"]
atlas = ExtResource("2_n6pvg")
region = Rect2(768, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2qrb"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oir2r"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_krpmv"]
atlas = ExtResource("2_n6pvg")
region = Rect2(192, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpvd1"]
atlas = ExtResource("2_n6pvg")
region = Rect2(288, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl3w4"]
atlas = ExtResource("2_n6pvg")
region = Rect2(384, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmc6m"]
atlas = ExtResource("2_n6pvg")
region = Rect2(480, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6220k"]
atlas = ExtResource("2_n6pvg")
region = Rect2(576, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuttx"]
atlas = ExtResource("2_n6pvg")
region = Rect2(672, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7t3r"]
atlas = ExtResource("2_n6pvg")
region = Rect2(768, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahgoc"]
atlas = ExtResource("2_n6pvg")
region = Rect2(864, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjw23"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2npkn"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd6lc"]
atlas = ExtResource("2_n6pvg")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gstla"]
atlas = ExtResource("2_n6pvg")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5wyi"]
atlas = ExtResource("2_n6pvg")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l8pv"]
atlas = ExtResource("2_n6pvg")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnioy"]
atlas = ExtResource("2_n6pvg")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xjuo"]
atlas = ExtResource("2_n6pvg")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a02ik"]
atlas = ExtResource("2_n6pvg")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu8ps"]
atlas = ExtResource("2_n6pvg")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8bnk"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kmbt"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8sfj"]
atlas = ExtResource("2_n6pvg")
region = Rect2(192, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwlqs"]
atlas = ExtResource("2_n6pvg")
region = Rect2(288, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwlg4"]
atlas = ExtResource("2_n6pvg")
region = Rect2(384, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sdgb"]
atlas = ExtResource("2_n6pvg")
region = Rect2(480, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrr3x"]
atlas = ExtResource("2_n6pvg")
region = Rect2(576, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyfvk"]
atlas = ExtResource("2_n6pvg")
region = Rect2(672, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iscye"]
atlas = ExtResource("2_n6pvg")
region = Rect2(768, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq06o"]
atlas = ExtResource("2_n6pvg")
region = Rect2(864, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6pvg"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g40cl"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxm07"]
atlas = ExtResource("2_n6pvg")
region = Rect2(192, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2qvl"]
atlas = ExtResource("2_n6pvg")
region = Rect2(288, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyl0w"]
atlas = ExtResource("2_n6pvg")
region = Rect2(384, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fur4c"]
atlas = ExtResource("2_n6pvg")
region = Rect2(480, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v7ff"]
atlas = ExtResource("2_n6pvg")
region = Rect2(576, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35t6e"]
atlas = ExtResource("2_n6pvg")
region = Rect2(672, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbccl"]
atlas = ExtResource("2_n6pvg")
region = Rect2(768, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24adn"]
atlas = ExtResource("2_n6pvg")
region = Rect2(864, 64, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_p2gj0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tc40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klxi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yeyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6mwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d6fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rewg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6x3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sacx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn7vh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp1f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfrqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhl3i")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qj7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf0ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txv6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kut4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1chl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3drt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6uvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7btj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yj7m")
}],
"loop": false,
"name": &"attack2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2qrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oir2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krpmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpvd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl3w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmc6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6220k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuttx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7t3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahgoc")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjw23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2npkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd6lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gstla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5wyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l8pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnioy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xjuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a02ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu8ps")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8bnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kmbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8sfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwlqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwlg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sdgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrr3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyfvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iscye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq06o")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6pvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g40cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxm07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2qvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyl0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fur4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v7ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35t6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbccl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24adn")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p2gj0"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n6pvg"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pjw23"]
radius = 7.0

[node name="slime" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_ivqcw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_p2gj0")
animation = &"attack"
autoplay = "walk"
frame = 11
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_p2gj0")

[node name="RayCastBottom" type="RayCast2D" parent="."]
position = Vector2(19, -2)
target_position = Vector2(0, 4)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(14, -2)
target_position = Vector2(4, 0)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_n6pvg")

[node name="Killzone" parent="." instance=ExtResource("3_n6pvg")]
position = Vector2(0, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("CircleShape2D_pjw23")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
